2010-08-04  Felix Wolfsteller <felix.wolfsteller@greenbone.net>

	* src/gsad.c: Backporting r8862 from trunk (mainpage directive for
	documentation).

2010-08-04  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/gsad_omp.c: Reverted unrelated changes of recent backport.

2010-08-04  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Backporting patch r8636 from trunk, comitted by Matthew Mundell.

	* src/gsad_omp.c (get_report_omp): Wrap in GET_REPORT instead of COMMANDS.
	Get the task summary as well as the report, for the task progress info.

	* src/htmp/omp.xsl (html-report-details): Replace "Final scan run status"
	field with "Scan status" and progress bar.
	(get_report): New template.

2010-08-03  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad.c (init_validator): Add - to family_page.

2010-08-02  Michael Wiegand <michael.wiegand@greenbone.net>

	Post release version bump.

	* CMakeLists.txt: Updated version number.

	* src/html/help.xsl: Updated version number.

2010-08-02  Michael Wiegand <michael.wiegand@greenbone.net>

	Preparing the gsa 1.0.0 release.

	* src/html/help.xsl: Updated version number.

	* CMakeLists.txt: Updated version number.

	* CHANGES: Updated.

	* INSTALL: Updated prerequisites.

2010-08-02  Michael Wiegand <michael.wiegand@greenbone.net>

	* INSTALL: Updated prerequisites.

	* CMakeLists.txt: Increased required openvas-libraries version.

2010-07-27  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad_omp.c (save_config_nvt_omp): Correct MODIFY_CONFIG call
	for NVT preferences.

2010-07-26  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad.c (serve_post): Account for chunking in file and password
	parsing.

2010-07-23  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad.c (serve_post): Account for chunking in preference parsing.
	Most of work by Michael Wiegand.

2010-07-22  Michael Wiegand <michael.wiegand@greenbone.net>
